--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "json-web-token": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.2",
     "mongoose": "^5.7.0",
     "socket.io": "^2.2.0"
+  },
+  "devDependencies": {
+    "cross-env": "^5.2.1",
+    "dotenv": "^8.1.0"
   }
 }
