--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
+    "cors": "^2.8.5",
     "cross-env": "^5.2.1",
     "dotenv": "^8.1.0"
   }
