--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "api-query-params": "^4.14.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "express-winston": "^3.3.0",
     "jsonwebtoken": "^8.5.1",
+    "mongo-sanitize": "^1.0.1",
     "mongodb": "^3.3.2",
     "mongoose": "^5.7.0",
     "morgan": "^1.9.1",
